--- a/package.json
+++ b/package.json
@@ -2,24 +2,34 @@
   "name": "tamplate7",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "import-data": "node scripts/importTemplate7Data.mjs"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@sanity/client": "^6.27.1",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.71.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "icons": "^1.0.0",
     "lucide-react": "^0.468.0",
     "next": "14.2.15",
+    "next-sanity": "^9.8.39",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "sanity": "^3.71.0",
+    "styled-components": "^6.1.14",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
